# CodeAtlas

./: .codeatlas.yml  .gitignore  README.md  pyproject.toml
docs/: interview-notes.md
src/codeatlas/: __init__.py  agent_install.py  analysis.py  artifacts.py  benchmark.py  cli.py  config.py  external_index.py  graph.py  indexer.py  mcp_server.py  memory.py  models.py  packs.py  project_config.py  retrieval.py  rules.py  scanner.py  semantic.py  source.py  status.py  storage.py  verification.py  visualization.py  watcher.py  workflow_cache.py
src/codeatlas/assets/: visualization.css  visualization.html  visualization.js
src/codeatlas/parsers/: __init__.py  base.py  javascript.py  python.py  registry.py
tests/: test_codeatlas.py  test_ui_smoke.py
tests/fixtures/: scip-index.json
