[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "codeatlas"
version = "0.1.0"
description = "Local-first code intelligence and graph retrieval for AI coding assistants."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CodeAtlas Contributors" }]
dependencies = [
  "networkx>=3.2",
  "rich>=13.7",
  "tree-sitter>=0.22",
  "tree-sitter-language-pack>=0.7",
  "typer>=0.12",
  "watchdog>=4.0",
]

[project.optional-dependencies]
mcp = [
  "fastmcp>=2.0",
  "mcp>=1.0",
]
semantic = [
  "basedpyright>=1.29",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
codeatlas = "codeatlas.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codeatlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
